fix: trying to fix hero by changing height on tablet and base

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -138,7 +138,7 @@ header{
 .hero{ 
     position: relative;
     width: 100%;
-    height: 80vh;
+    height: 150vh;
     overflow: hidden;
     margin-top: 1rem;
     margin-bottom: 1rem;
