--- a/src/scss/_tablet.scss
+++ b/src/scss/_tablet.scss
@@ -11,6 +11,10 @@
         font-size: 2rem;
     }
 
+    .hero{
+        height: 80vh;
+    }
+
     .hero-content{
         .hero-background{
             padding: 5rem;
